[tool.poetry]
name = "account-sharing-proxy-server"
version = "0.1.0"
description = "Selfhosted sharing accounts application"
authors = ["codingbreak team"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-JWT-Extended = "^4.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
types-Flask = "^1.1.4"
types-requests = "^2.25.11"
pytest = "^6.2.5"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
